# iai

./: AGENTS.md  pyproject.toml  ruff.toml
src/assets/: HousingData.csv  cities_correlation_matrix.csv  model.keras  problem_data.csv
src/week2/: __init__.py  main.py  pq.py
src/week3/: main.py  utils.py
src/week4/: classfication.py  main.py  r-sample.py  regression.py
src/week5/: fnn-regression-classification.py  timeseries.py
src/week6/: __init__.py  heading.py  mdp4e.py  rl.py  utils4e.py
src/week7/: cnn.py  heading.py
src/week8/: heading.py  nlp.py  sentiment.py
