[project]
name = "py-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    # TensorFlow 2.16.1 requires numpy <=1.26.4
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "openml>=0.15.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    # Pin to latest stable TF (2.16.x) compatible with Python 3.12; avoid experimental 2.20 pre-release causing mutex crash on 3.13
    "tensorflow==2.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "poethepoet>=0.36.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poe.tasks]
run = "python src/main.py"
test = "pytest tests"
test-cov = "pytest tests --cov=src"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
type-check = "mypy src/"
pre-commit = "pre-commit run --all-files"
all-checks = ["lint", "format", "type-check", "test"]
